tests/expectations/compiler/constructor/constructor_without_async_fail.out
Error [EPAR0370047]: expected 'async' before 'constructor'
    --> compiler-test:5:5
     |
   5 |     constructor() {
     |     ^^^^^^^^^^^
